--- a/project.uvprojx
+++ b/project.uvprojx
@@ -425,41 +425,6 @@
               <FilePath>.\src\lcd.h</FilePath>
             </File>
             <File>
-              <FileName>qassert.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\qassert.h</FilePath>
-            </File>
-            <File>
-              <FileName>qepn.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\src\qepn.c</FilePath>
-            </File>
-            <File>
-              <FileName>qepn.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\qepn.h</FilePath>
-            </File>
-            <File>
-              <FileName>qfn.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\src\qfn.c</FilePath>
-            </File>
-            <File>
-              <FileName>qfn.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\qfn.h</FilePath>
-            </File>
-            <File>
-              <FileName>qfn_init.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\src\qfn_init.c</FilePath>
-            </File>
-            <File>
-              <FileName>qpn_port.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\qpn_port.h</FilePath>
-            </File>
-            <File>
               <FileName>SPI.c</FileName>
               <FileType>1</FileType>
               <FilePath>.\src\SPI.c</FilePath>
@@ -480,14 +445,69 @@
               <FilePath>.\src\SysClock.h</FilePath>
             </File>
             <File>
-              <FileName>gui.c</FileName>
+              <FileName>DAC.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\src\gui.c</FilePath>
+              <FilePath>.\src\DAC.c</FilePath>
             </File>
             <File>
-              <FileName>gui.h</FileName>
+              <FileName>DAC.h</FileName>
               <FileType>5</FileType>
-              <FilePath>.\src\gui.h</FilePath>
+              <FilePath>.\src\DAC.h</FilePath>
+            </File>
+            <File>
+              <FileName>EXTI.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\src\EXTI.c</FilePath>
+            </File>
+            <File>
+              <FileName>EXTI.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\EXTI.h</FilePath>
+            </File>
+            <File>
+              <FileName>MY_ILI9341.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\src\MY_ILI9341.c</FilePath>
+            </File>
+            <File>
+              <FileName>MY_ILI9341.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\MY_ILI9341.h</FilePath>
+            </File>
+            <File>
+              <FileName>PWM.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\src\PWM.c</FilePath>
+            </File>
+            <File>
+              <FileName>PWM.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\PWM.h</FilePath>
+            </File>
+            <File>
+              <FileName>UART.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\src\UART.c</FilePath>
+            </File>
+            <File>
+              <FileName>UART.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\UART.h</FilePath>
+            </File>
+            <File>
+              <FileName>UART_printf.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\src\UART_printf.c</FilePath>
+            </File>
+            <File>
+              <FileName>SysTimer.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\SysTimer.h</FilePath>
+            </File>
+            <File>
+              <FileName>SysTimer.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\src\SysTimer.c</FilePath>
             </File>
           </Files>
         </Group>
